--- a/openstack-haproxy-blueprint.yaml
+++ b/openstack-haproxy-blueprint.yaml
@@ -24,30 +24,35 @@ workflows:
         description: policy file
         type: string
 
-
-node_types:
-
+relationships:
   security_host_connected_to_target:
      derived_from: cloudify.relationships.connected_to
-        target_interfaces:
-           cloudify.interfaces.relationship_lifecycle:
-           # need to create a new function in openstack_plugin to update security group
-              - start: security_topology_plugin.tasks.update_target_host_ip
-           properties:
-              direction: source to target
-        source_interfaces:
-           cloudify.interfaces.relationship_lifecycle:
-           # need to create a new function in openstack_plugin to update security group
-              - start: security_topology_plugin.tasks.update_source_host_ip
-           properties:
-              direction: target to source
+     target_interfaces:
+       cloudify.interfaces.relationship_lifecycle:
+         # need to create a new function in openstack_plugin to update security group
+         start: 
+           implementation: security_topology_plugin.tasks.update_target_host_ip
+     source_interfaces:
+       cloudify.interfaces.relationship_lifecycle:
+        # need to create a new function in openstack_plugin to update security group
+         start: 
+           implementation: security_topology_plugin.tasks.update_target_host_ip
+     properties:
+       direction: ##yoram: Do we really need this one?
+         default: source_to_target
+       ports:
+         default: none
 
+##yoram: I think this should not be here:
   security_host_connected_to_target_tag_version:
      derived_from: cloudify.relationships.connected_to
-        target_interfaces:
-           cloudify.interfaces.relationship_lifecycle:
-           # need to create a new function in openstack_plugin to update security group
-                - start: security_topology_plugin.tasks.update_host_ip #both source and target
+     target_interfaces:
+       cloudify.interfaces.relationship_lifecycle:
+         # need to create a new function in openstack_plugin to update security group
+         start: 
+           implementation: security_topology_plugin.tasks.update_host_ip #both source and target
+
+
 
 
 #####################################################################################
@@ -89,7 +94,8 @@ node_templates:
       - type: security_host_connected_to_target
         target: mongod
         properties:
-           direction: source to target
+           ports: 
+             - { get_property: [ mongod, port ] }
 
       ##### tag version
       - type: security_host_connected_to_target_tag_version
@@ -146,15 +152,6 @@ node_templates:
 
   mongod_host:
     type: nodecellar.nodes.MonitoredServer
-    relationships:
-
-      ###########################################################
-      # Attaching the mongo security group to the mongo host
-      ###########################################################
-
-      - target: mongod_security_group
-        type: cloudify.openstack.server_connected_to_security_group
-
   nodejs_host:
     type: nodecellar.nodes.MonitoredServer
 
@@ -162,19 +159,8 @@ node_templates:
     # Setting the nodejs_host initial number of instances to 2.
     # The default values for instances.deploy is 1.
     ###########################################################
-
     instances:
       deploy: 2
-
-    relationships:
-
-      ###########################################################
-      # Attaching the nodecellar security group to
-      # the nodecellar host
-      ###########################################################
-
-      - target: nodecellar_security_group
-        type: cloudify.openstack.server_connected_to_security_group
 
   haproxy_frontend_host:
     type: nodecellar.nodes.MonitoredServer
@@ -186,70 +172,6 @@ node_templates:
 
       - type: cloudify.openstack.server_connected_to_floating_ip
         target: nodecellar_ip
-
-      ###########################################################
-      # Attaching the haproxy frontend security group to
-      # the haproxy frontend host
-      ###########################################################
-
-      - type: cloudify.openstack.server_connected_to_security_group
-        target: haproxy_frontend_security_group
-
-  ###########################################################
-  # A security group to enable access to the mongo host
-  # using the port of the mongo node.
-  #
-  # We need this so that the nodecellar application can
-  # comminicate with MongoDB, since they are running on
-  # different hosts.
-  ###########################################################
-
-  mongod_security_group:
-    type: cloudify.openstack.nodes.SecurityGroup
-    properties:
-      security_group:
-        name: mongod_security_group
-      rules:
-        - remote_ip_prefix: 0.0.0.0/0
-          port: { get_property: [ mongod, port ] }
-        - remote_ip_prefix: 0.0.0.0/0
-          port: 28017
-
-  ###########################################################
-  # A security group to enable access to the nodejs host
-  # using the port of the nodecellar application.
-  #
-  # This security group will be attached to the nodejs_host
-  ###########################################################
-
-  nodecellar_security_group:
-    type: cloudify.openstack.nodes.SecurityGroup
-    properties:
-      security_group:
-        name: nodecellar_security_group
-      rules:
-        - remote_ip_prefix: 0.0.0.0/0
-          port: { get_property: [ nodecellar, port ] }
-
-  ###########################################################
-  # A security group to enable access to the haproxy frontend
-  # host using the haproxy frontend_port property.
-  # In addition, we open the statistics port (9000) of haproxy
-  #
-  # This security group will be attached to the
-  # haproxy_frontend_host
-  ###########################################################
-
-  haproxy_frontend_security_group:
-    type: cloudify.openstack.nodes.SecurityGroup
-    properties:
-      security_group:
-        name: haproxy_frontend_security_group
-      rules:
-        - remote_ip_prefix: 0.0.0.0/0
-          port: { get_property: [ haproxy, frontend_port ] }
-        - remote_ip_prefix: 0.0.0.0/0
-          port: { get_property: [ haproxy, statistics_port ]}
 
   ###########################################################
   # An ip to be attached to the haproxy frontend host, since
